// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Site: Link Basic Usage 1`] = `
Object {
  "docs": "",
  "html": "<a class=\\"drac-link drac-text drac-text-white drac-text-white--hover\\">Link</a>
",
  "react": "<Link>Link</Link>;
",
  "title": "Usage",
}
`;

exports[`Site: Link Colors 1`] = `
Object {
  "docs": "",
  "html": "<div></div>
",
  "react": "<div />;
",
  "title": "Colors",
}
`;

exports[`Site: Link Sizes 1`] = `
Object {
  "docs": "",
  "html": "<div></div>
",
  "react": "<div />;
",
  "title": "Sizes",
}
`;

exports[`Site: Link Weights 1`] = `
Object {
  "docs": "",
  "html": "<div></div>
",
  "react": "<div />;
",
  "title": "Weights",
}
`;
